fixed the collapsed border and changed colors

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ h1{
     color: darkblue;
 }
 
-th, td{
+table, th, td{
     text-align: center;
     border-bottom: 1px solid black;
     border-collapse: collapse;
@@ -23,5 +23,5 @@ tr:nth-child(even){
 }
 
 tr:nth-child(odd){
-    background-color: lightblue;
+    background-color: lightslategray;
 }
